src/objects/sbxe1__Ticket__c.object
<CustomObject>
    <description>This is a child object to the Opportunity object for tracking individual tickets for events.</description>
    <fields>
        <fullName>sbxe1__sbx_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked denotes that this ticket holder attended the event.</description>
        <inlineHelpText>Checked denotes that this ticket holder attended the event.</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The campaign record related to this ticket.</description>
        <inlineHelpText>The campaign record related to this ticket.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Campaign_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_EventName__c</fullName>
        <formula>sbxe1__sbx_Opportunity__r.Campaign.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_FullName__c</fullName>
        <formula>if ( BEGINS(sbxe1__sbx_FirstName__c, &quot;FirstName&quot;) , &quot;&quot;, sbxe1__sbx_FirstName__c &amp; &quot; &quot; &amp; sbxe1__sbx_LastName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_HomePhone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingPostalCode__c</fullName>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingState__c</fullName>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_SoapboxRegistrationOrderId__c</fullName>
        <description>The ID of the order coming from Soapbox Events for a registration.</description>
        <inlineHelpText>The ID of the order coming from Soapbox Events for a registration.</inlineHelpText>
        <label>Soapbox Registration Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_SoapboxTicketId__c</fullName>
        <description>The ticket ID from the Soapbox Events inbound ticket.</description>
        <inlineHelpText>The ticket ID from the Soapbox Events inbound ticket.</inlineHelpText>
        <label>Soapbox Ticket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_TicketHolderContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact record related to this ticket holder.</description>
        <inlineHelpText>The contact record related to this ticket holder.</inlineHelpText>
        <label>Ticket Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assigned Tickets</relationshipLabel>
        <relationshipName>Assigned_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_TicketPrice__c</fullName>
        <label>Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_TicketPurchaserContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact record related to the purchaser of this ticket.</description>
        <inlineHelpText>The contact record related to the purchaser of this ticket.</inlineHelpText>
        <label>Purchaser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchased Tickets</relationshipLabel>
        <relationshipName>Purchased_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_TicketType__c</fullName>
        <label>Ticket Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbxe1__sbx_WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>Ticket</label>
    <nameField>
        <displayFormat>{0000000}-{MM}{DD}{YYYY}</displayFormat>
        <label>Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>